# mila-setup

./: .gitignore  main.py  pyproject.toml  slurm-8671252.out
conf/: config.yaml
conf/dataset/: cifar.yaml
conf/infrastructure/: cluster.yaml  local.yaml
conf/model/: resnet.yaml
scripts/: train.sh  verify.sh  verify_multinode.sh
src/: data.py  train.py
src/infrastructure/: verify.py  verify_ddp.py
